<resources>
    <string name="app_name">视频监控App</string>
    <string name="myApp">我的</string>
    <string name="monitoring">监控</string>
    <string name="photos">相册</string>
    <string name="boats">船舶</string>
    <string name="inputPassword">请输入6–20位密码</string>
    <string name="inputPhonenum">请输入您的手机号</string>
    <string name="verification">请输入短信验证码</string>
    <string name="getVerification">点击获取验证码</string>
    <string name="inputPasswordAgain">请再次输入密码</string>
    <string name="setNewPassword">设置新密码</string>
    <string name="getPassword">找回密码</string>
    <string name="fastSignup">快速注册</string>
    <string name="signup">注册</string>
    <string name="login">登录</string>
    <string name="savenewpwd">保存新密码</string>
    <string name="nextstep">下一步</string>
    <string name="warning">监控开启时，有人上船偷盗，设备会自动发出警告音，吓退小偷，同时会自动拍照，留存证据，保障您的渔船安全！</string>
    <string name="config">设置</string>
    <string name="delete_tip">删除本船后您将无法继续监控“苏南渔0578”再次监控需要重新添加该船只。确定删除船舶“苏南渔业0578”，请输入账号密码。</string>
</resources>
