<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@color/titleBlue">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/getPassword"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/back_to_login_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25px"
            android:src="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/frame_signup"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/mobileNo_get_veri_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/imageView9"
                android:layout_toRightOf="@+id/imageView9"
                android:background="@null"
                android:hint="@string/inputPhonenum"
                android:inputType="phone"
                android:textColor="@color/textGrey2"
                android:textColorHint="@color/textGrey2"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/get_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:background="@drawable/corners_blue_btn"
                android:text="@string/getVerification"
                android:textColor="@color/textGrey"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/get_code_btn"
                android:layout_alignTop="@+id/get_code_btn"
                android:layout_toLeftOf="@+id/get_code_btn"
                android:layout_toStartOf="@+id/get_code_btn"
                android:background="@drawable/frame_signup">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="6dp"
                    android:src="@drawable/message" />

                <EditText
                    android:layout_marginLeft="8dp"
                    android:id="@+id/fetch_code_getveri_input"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:hint="@string/verification"
                    android:textColor="@color/textGrey2"
                    android:textColorHint="@color/textGrey2"
                    android:textSize="20sp"
                    android:layout_toRightOf="@+id/imageView14"
                    android:layout_toEndOf="@+id/imageView14" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/corners_grey_btn"
            android:text="@string/nextstep"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:text="遇到问题？"
            android:textSize="16sp"
            android:textColor="@color/titleBlue" />
    </LinearLayout>
</LinearLayout>