<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@color/titleBlue">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/getPassword"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/back_to_get_veri_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25px"
            android:src="@drawable/back" />

    </RelativeLayout>

    <TextView
        android:id="@+id/reset_password_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:text="重置密码后，下次登录请使用新密码"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/frame_signup"
        android:padding="2dp">

        <EditText
            android:id="@+id/reset_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/setNewPassword"
            android:inputType="textPassword"
            android:textColor="@color/textGrey2"
            android:textColorHint="@color/textGrey2"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/eye3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:src="@drawable/eye" />
    </RelativeLayout>

    <Button
        android:id="@+id/save_new_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/corners_grey_btn"
        android:text="@string/savenewpwd"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>