<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@color/titleBlue">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/fastSignup"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/back_to_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25px"
            android:src="@drawable/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/frame_signup"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:background="@null"
                android:hint="@string/inputPhonenum"
                android:inputType="phone"
                android:textColor="@color/textGrey2"
                android:textColorHint="@color/textGrey2"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/frame_signup"
            android:padding="2dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password_signup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_toRightOf="@+id/imageView3"
                android:background="@null"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:textColor="@color/textGrey2"
                android:textColorHint="@color/textGrey2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/eye1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/password_signup_text"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:src="@drawable/eye" />

            <ImageView
                android:id="@+id/clear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/clearpwd" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/frame_signup"
            android:padding="2dp">

            <EditText
                android:id="@+id/repassword_signup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/imageView5"
                android:layout_toRightOf="@+id/imageView5"
                android:background="@null"
                android:hint="@string/inputPasswordAgain"
                android:inputType="textPassword"
                android:textColor="@color/textGrey2"
                android:textColorHint="@color/textGrey2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/password" />

            <ImageView
                android:id="@+id/eye2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:src="@drawable/eye" />

            <ImageView
                android:id="@+id/clear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/eye2"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/eye2"
                android:layout_toStartOf="@+id/eye2"
                android:src="@drawable/clearpwd" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:paddingRight="2dp">

            <Button
                android:id="@+id/get_fetch_code"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:background="@drawable/corners_blue_btn"
                android:text="@string/getVerification"
                android:textColor="@color/textGrey"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/get_fetch_code"
                android:layout_alignTop="@+id/get_fetch_code"
                android:layout_marginRight="16dp"
                android:layout_toLeftOf="@+id/get_fetch_code"
                android:layout_toStartOf="@+id/get_fetch_code"
                android:background="@drawable/frame_signup">

                <ImageView
                    android:id="@+id/message_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="6dp"
                    android:src="@drawable/message" />

                <EditText
                    android:id="@+id/message_text"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toEndOf="@+id/message_img"
                    android:layout_toRightOf="@+id/message_img"
                    android:background="@null"
                    android:hint="@string/verification"
                    android:textColor="@color/textGrey2"
                    android:textColorHint="@color/textGrey2"
                    android:textSize="20sp" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/corners_blue_btn"
            android:text="@string/signup"
            android:textColor="@color/textGrey"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>