<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haishanda.android.videoapp.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/top_buttons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/titleBlue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addUser"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="13dp"
                android:background="@color/titleBlue"
                android:src="@drawable/addboat" />

            <Spinner
                android:id="@+id/spinner_index_choices"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:longClickable="false"
                android:scrollbarSize="18dp" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="13dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="13dp"
                android:background="@color/titleBlue"
                android:src="@drawable/settings" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/main_ground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00"
            android:background="@color/backgroundColor" />

        <LinearLayout
            android:id="@+id/buttom_buttons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/boat_img"
                    android:layout_width="20dp"
                    android:layout_height="22dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/boat_pick" />

                <TextView
                    android:id="@+id/boat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:text="@string/boats"
                    android:textColor="@color/textBlue"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/photos_img"
                    android:layout_width="22dp"
                    android:layout_height="18dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/photos_unpick" />

                <TextView
                    android:id="@+id/photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:text="@string/photos"
                    android:textColor="@color/textGrey"
                    android:textSize="10sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:text="@string/monitoring"
                    android:textColor="@color/textGrey"
                    android:textSize="10sp" />

                <ImageView
                    android:id="@+id/monitor_img"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_above="@+id/monitor"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/monitor_unpick" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="skipToLoginPage">

                <ImageView
                    android:id="@+id/myApp_img"
                    android:layout_width="20dp"
                    android:layout_height="21dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/my_unpick" />

                <TextView
                    android:id="@+id/myApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:text="@string/myApp"
                    android:textColor="@color/textGrey"
                    android:textSize="10sp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
