<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titleBlue">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="修改密码"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back_to_common_settings"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/back" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/reset_password_with_token_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/logined_phonenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="27dp"
                android:textColor="#666666"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="18dp">

                <Button
                    android:id="@+id/get_code_btn_logined"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/corners_blue_btn"
                    android:text="@string/getVerification"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@id/get_code_btn_logined"
                    android:background="@drawable/both_stroke_white">

                    <ImageView
                        android:id="@+id/message_img"
                        android:layout_width="18dp"
                        android:layout_height="13dp"
                        android:layout_marginBottom="17.5dp"
                        android:layout_marginLeft="14dp"
                        android:layout_marginTop="17.5dp"
                        android:src="@drawable/message" />

                    <EditText
                        android:id="@+id/logined_code_input"
                        style="@style/font_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="14dp"
                        android:layout_toEndOf="@+id/message_img"
                        android:layout_toRightOf="@+id/message_img"
                        android:background="@null"
                        android:hint="@string/verification" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/to_resetpwd_with_token2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/corners_grey_btn"
                android:text="@string/nextstep"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/meet_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="12dp"
                android:layout_marginTop="17.5dp"
                android:text="遇到问题？"
                android:textColor="@color/textBlue"
                android:textSize="14sp" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>